--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,23 @@
     <link rel="stylesheet" href="assets/css/index.css" />
   </head>
   <body>
-    <script src="assets/lib/socket.io/socket.io.esm.min.js"></script>
-    <script src="assets/js/client.js"></script>
+    <div id="message-container"></div>
+    <form id="form">
+      <div class="form-group">
+        <label for="message-input">Message</label>
+        <input type="text" id="message-input" />
+        <button type="submit" id="send-button">Send</button>
+      </div>
+      <div class="form-group">
+        <label for="room-input">Room</label>
+        <input type="text" id="room-input" />
+        <button type="submit" id="room-button">Join</button>
+      </div>
+    </form>
+    <script
+      src="assets/lib/socket.io/socket.io.esm.min.js"
+      type="module"
+    ></script>
+    <script src="assets/js/client.js" type="module"></script>
   </body>
 </html>
